--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 # Get your API key from https://resend.com
 RESEND_API_KEY=re_xxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+# Your production site URL (for Open Graph metadata)
+NEXT_PUBLIC_SITE_URL=https://chuabacca.com
